--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -12,7 +12,7 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest    
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@attackspeed
     
     - run: sudo apt-get install doxygen
     - run: sudo apt-get install graphviz
