--- a/.github/workflows/testing_outputs.yml
+++ b/.github/workflows/testing_outputs.yml
@@ -1,10 +1,9 @@
 name: TestOutput
 
-on:
-  push 
+on: push 
 
 jobs:
-	Testing:
+	Test:
 		runs-on: ubuntu-latest
 		steps:
 		- uses: actions/checkout@v2
