Modify git action

--- a/.github/workflows/testing_outputs.yml
+++ b/.github/workflows/testing_outputs.yml
@@ -1,19 +1,20 @@
+
 name: TestOutput
 
-on: push 
+on: push
 
 jobs:
-		HeroFight:
-			runs-on: ubuntu-latest
-			steps:
-			- uses: actions/checkout@v2
-			- run: sudo apt-get install -y valgrind cppcheck
-			- run: cppcheck *.cpp --enable=warning --error-exitcode=1
-			- run: cppcheck *.cpp --enable=warning.warning.style.performance --output-file=testing/styleperform.txt
-			- uses: actions/upload-artifact@v2
-			  with:
-				name: styleperform
-				path: ./testing/styleperform.txt
-			- run: clang++ *.cpp -Wall -Wextra
-			- run: valgrind --leak-check=full --error-exitcode=1 ./a.out testing/units/advHalis.json testing/units/codos.json
-			- run: ./run-test.sh
+        Testing:
+                runs-on: ubuntu-latest
+                steps: 
+                - uses: actions/checkout@v2
+                - run: sudo apt-get install -y valgrind cppcheck
+                - run: cppcheck *.cpp --enable=warning --error-exitcode=1
+                - run: cppcheck *.cpp --enable=warning,style,performance --output-file=testing/styleperform.txt
+                - uses: actions/upload-artifact@v2
+                  with:
+                        name: styleperform
+                        path: ./testing/styleperform.txt
+                - run: clang++ *.cpp -Wall -Wextra
+                - run: valgrind --leak-check=full --error-exitcode=1 ./a.out test/units/kakarott.json test/units/kikarott.json
+                - run: ./run-test.sh
