--- a/.github/workflows/parserTest.yml
+++ b/.github/workflows/parserTest.yml
@@ -1,18 +1,18 @@
-name: JsonParser_tests
+name: JSONParse_tests
 
-on:push
+on: push
 
 jobs:
-		build_and_run_tests:
-			runs-on: ubuntu-latest
-			steps:
-			- uses: actions/checkout@v2
-			- run: sudo apt install libgtest-dev
-			- run: sudo apot install cmake
+        build_and_run_tests:
+                runs-on: ubuntu-latest
+                steps: 
+                - uses: actions/checkout@v2
+                - run: sudo apt install libgtest-dev
+                - run: sudo apt install cmake
 
-			- run: cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make
+                - run: cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make
 
-			- run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest.a
-			- run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest_main.a
-
-			- run: cd test && cmake CMakeLists.txt && make && ./runTests
+                - run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest.a
+                - run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest_main.a
+                
+                - run: cd testing && cmake CMakeLists.txt && make ./runTests
