--- a/.github/workflows/parserTest.yml
+++ b/.github/workflows/parserTest.yml
@@ -15,4 +15,4 @@ jobs:
                 - run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest.a
                 - run: sudo ln -st /usr/lib/ /usr/src/gtest/libgtest_main.a
                 
-                - run: cd testing && cmake CMakeLists.txt && make && ./runTests
+                - run: cd test && cmake CMakeLists.txt && make && ./runTests
