--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ project(jsonParser)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-add_executable(runTests jsonparserTest.cpp ../jsonParser.cpp)
+add_executable(runTests projectTest.cpp ../jsonParser.cpp ../Hero.cpp) 
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
