--- a/.github/workflows/testing_outputs.yml
+++ b/.github/workflows/testing_outputs.yml
@@ -15,6 +15,6 @@ jobs:
                   with:
                         name: styleperform
                         path: ./test/styleperform.txt
-                - run: clang++ *.cpp -Wall -Wextra
-                - run: valgrind --leak-check=full --error-exitcode=1 ./a.out test/units/kakarott.json test/units/kikarott.json
+                - run: clang++ -std=c++17 *.cpp -Wall -Wextra
+                - run: valgrind --leak-check=full --error-exitcode=1 ./a.out scenario1.json
                 - run: ./run-test.sh
