Add docker container and modify workflows

--- a/.github/workflows/programTest.yml
+++ b/.github/workflows/programTest.yml
@@ -5,9 +5,8 @@ on: push
 jobs:
         build_and_run_tests:
                 runs-on: ubuntu-latest
+                container: tibix2310/mosze:latest
                 steps: 
                 - uses: actions/checkout@v2
-                - run: sudo apt install libgtest-dev
-                - run: sudo apt install cmake
 
                 - run: make programTest
